Switching page "topactions widths to "auto" from being fixed. Resolves bugs on IE7 and FF2(Win)
git-svn-id: svn+ssh://svn.bestpractical.com/svn/bps-public/rt/3.8/branches/3.8.0-releng@13351 e417ac7c-1bcc-0310-8ffa-8f5827389a85

--- a/share/html/NoAuth/css/web2/layout.css
+++ b/share/html/NoAuth/css/web2/layout.css
@@ -80,9 +80,9 @@ div#body {
 #topactions {
  position: absolute;
  background: transparent;
- right: 1em;
  top: 3.8em; 
- width: 39em;
+ right: 1em;
+ width: auto;
  font-size: 0.9em;
  z-index: 99;
 }
